--- a/splash.yaml
+++ b/splash.yaml
@@ -1,7 +1,7 @@
 flutter_native_splash:
-  color: "#FFFFFF"
-  color_dark: "#272727"
-  image: assets/logos/t-store-splash-logo-black.png
-  image_dark: assets/logos/t-store-splash-logo-white.png
+color: "#FFFFFF"
+color_dark: "#272727"
+image: assets/logos/brandDark.png
+image_dark: assets/logos/brandLight.png
 
-  web: false
+web: false
